# mini-dns-classifier

./: .cspell.json  .gitignore  README.md  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
models/: .gitignore  README.md  api.py  cnn.py  dect.py  make_multilabel_sets.py  make_test_set.py  model.py  nn.py  pomdp.py  predictor.py
src/: index.css  index.tsx
src/components/: Header.tsx
src/components/ui/: chart.tsx
src/lib/: api.ts
src/views/: list.tsx  main.tsx  report.tsx
