[project]
name = "mini-dns-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "surrealdb>=1.0.4",
    "tensorflow>=2.19.0",
]
